2022-10-05T08:29:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3188373759
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 44 162 / 56 185
* notice: next accum: outdated-unq outdated-all / unq all: 44 162 / 56 184
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-21]

2022-10-04T16:35:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183863179
* notice: last 14d: unq all: 1 23
* notice: prev accum: outdated-unq outdated-all / unq all: 43 160 / 56 184
* notice: next accum: outdated-unq outdated-all / unq all: 44 162 / 56 185
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-20] / []

2022-10-04T08:31:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3180598105
* notice: last 14d: unq all: 1 24
* notice: prev accum: outdated-unq outdated-all / unq all: 43 160 / 56 185
* notice: next accum: outdated-unq outdated-all / unq all: 43 160 / 56 184
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-20]

2022-10-03T16:37:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3175853122
* notice: last 14d: unq all: 1 25
* notice: prev accum: outdated-unq outdated-all / unq all: 42 158 / 56 184
* notice: next accum: outdated-unq outdated-all / unq all: 43 160 / 56 185
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-19] / []

2022-10-03T08:31:06Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172702394
* notice: last 14d: unq all: 1 26