@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-05T08:29:14Z",
-  "count_outdated" : 162,
-  "uniques_outdated" : 44,
-  "count" : 184,
-  "uniques" : 56,
+  "timestamp" : "2022-10-06T01:58:15Z",
+  "count_outdated" : 164,
+  "uniques_outdated" : 45,
+  "count" : 186,
+  "uniques" : 57,
   "clones" : [
-    {
-      "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 2,
@@ -84,6 +77,13 @@
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
