@@ -1,12 +1,7 @@
 {
   "count": 22,
-  "uniques": 1,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 2,
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
