@@ -1,3 +1,11 @@
+2022-10-06T01:58:15Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193982425
+* notice: last 14d: unq all: 2 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 162 / 56 184
+* notice: next accum: outdated-unq outdated-all / unq all: 45 164 / 57 186
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-21] / [2022-10-05]
+
 2022-10-05T08:29:14Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3188373759
 * notice: last 14d: unq all: 1 22
